Add responsive header

--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
         <a href="">Subscribe</a></span>
       <span id="login"><a href="#">Login</a></span>
     </div>
+
+    <div id="header-f-c-2">
+      <div id="header-f-c-2-1">
+        <button id="header-btn">
+          <a href="#"><img src="https://img.icons8.com/material-outlined/16/000000/menu.png"></a>
+        </button>
+        <button id="header-btn-search">
+          <a href="#">
+            <img src="https://img.icons8.com/material-rounded/16/000000/search.png">
+          </a>
+        </button>
+        <span id="header-btn-span">
+          <a href="#">Space & Cosmos</a>
+        </span>
+      </div>
+      <div id="header-logo">
+        <img src="images/nyt-logo.png" alt="NewYorkTimes-Logo" class="nyt-logo">
+      </div>
+      <div id="header-btn-sl">
+        <button id="header-btn-sub">
+          <span>Subscribe</span>
+        </button>
+        <button id="header-btn-login">
+          <span>Login</span>
+        </button>
+      </div>
+    </div>
   </header>
 
   <main id="site-content">
