Edit newsletter section

--- a/index.html
+++ b/index.html
@@ -470,6 +470,117 @@
         </div>
       </div>
 
+      <section id="newsletter-sign-up">
+          <div id="newsletter-container">
+            <div id="newsletter-flex">
+              <div id="newsletter-title">
+                <h2 id="newsletter-h2">Sign up for Science Times</h2>
+                <p id="newsletter-p">
+                  We’ll bring you stories that capture the wonders of the human body, nature and the cosmos.
+                </p>
+              </div>
+              <div id="newsletter-btn-email">
+                <div id="email-sign-up">
+                  <label for="email" class="email-container">
+                    <input type="email" name="email" id="email" placeholder="Enter your email address"
+                      class="email-input">
+                  </label>
+                  <div id="nl-btn-container">
+                    <button id="nl-btn">
+                      <span>Sign Up</span>
+                    </button>
+                  </div>
+                </div>
+                <div id="check-updates">
+                  <label for="special-offers" class="nl-check-label">
+                    <input id="special-offers" class="nl-check-input" name="special-offers" type="checkbox" value="MM">
+                  </label>
+                  <span class="nl-span">
+                    I want to receive updates and promotions from The New York Times. I can opt out any time.
+                  </span>
+                </div>
+                <div id="nl-pp-cu">
+                  <span class="span-privacy pp-cu-style">
+                    Privacy Policy
+                  </span>
+                  <span class="span-contact-us pp-cu-style">
+                    Contact Us
+                  </span>
+                </div>
+  
+              </div>
+            </div>
+          </div>
+        </section>
+
+      <div class="more-articles">
+
+        <div id="collection-content">
+
+          <div id="more-content">
+            <div class="mia-title">
+              <h2>More in Space & Cosmos</h2>
+            </div>
+            <div id="content-about-container">
+  
+              <div class="ca-item">
+                <div class="ca-item-image-container">
+                  <a href="#">
+                    <figure class="item-1">
+                      <img src="https://static01.nyt.com/images/2019/04/09/science/04FRAGMENT1/04FRAGMENT1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
+                      <figcaption class="item-caption">
+                        <span>Mark Garlick/University of Warwick</span>
+                      </figcaption>
+                    </figure>
+                  </a>
+                </div>
+                <div class="ca-item-text-container">
+                  <a href="#">
+                    <h2>Apocalypse Next? Astronomers Find a Chunk of Planet Around a Distant, Dead Star</h2>
+                  </a>
+                  <span class="item-timespan">April 5</span>
+                </div>
+              </div>
+  
+              <div class="ca-item">
+                <div class="ca-item-image-container"></div>
+                <div class="ca-item-text-container"></div>
+              </div>
+  
+              <div class="ca-item">
+                <div class="ca-item-image-container"></div>
+                <div class="ca-item-text-container"></div>
+              </div>
+
+              <div class="ca-item">
+                <div class="ca-item-image-container"></div>
+                <div class="ca-item-text-container"></div>
+              </div>
+  
+              <div class="ca-item">
+                <div class="ca-item-image-container"></div>
+                <div class="ca-item-text-container"></div>
+              </div>
+  
+              <div class="ca-item">
+                <div class="ca-item-image-container"></div>
+                <div class="ca-item-text-container"></div>
+              </div>
+
+            </div>
+          </div>
+          
+          <div id="editors-picks">
+
+          </div>
+
+        </div>
+        <div id="more-popular">
+
+        </div>
+
+      </div>
+
     </article>
 
   </main>
